--- a/src/dict_mgmt/terminology_update_steps.ipynb
+++ b/src/dict_mgmt/terminology_update_steps.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 25,
    "metadata": {
     "notebookRunGroups": {
      "groupValue": "12"
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 26,
    "metadata": {
     "notebookRunGroups": {
      "groupValue": "12"
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 27,
    "metadata": {
     "notebookRunGroups": {
      "groupValue": "12"
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 28,
    "metadata": {
     "notebookRunGroups": {
      "groupValue": "12"
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 29,
    "metadata": {
     "notebookRunGroups": {
      "groupValue": "12"
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 30,
    "metadata": {
     "notebookRunGroups": {
      "groupValue": "12"
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 31,
    "metadata": {
     "notebookRunGroups": {
      "groupValue": "12"
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 32,
    "metadata": {
     "notebookRunGroups": {
      "groupValue": "12"
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 33,
    "metadata": {
     "notebookRunGroups": {
      "groupValue": "2"
@@ -717,18 +717,18 @@
      "output_type": "stream",
      "text": [
       "Duplicates found for ['term', 'class_name', 'subclass_name']\n",
-      "+-------+--------+-----------------+--------------+---------------------+-----------------+--------------------+---------------------------------+\n",
-      "|    id | term   | subclass_name   | class_name   |           hash_code | is_valid_term   | has_duplicate_id   | duplicate_term_class_subclass   |\n",
-      "|-------+--------+-----------------+--------------+---------------------+-----------------+--------------------+---------------------------------|\n",
-      "| 19004 | basdai | FSDA            | assessment   | 2562687458370732289 | True            | False              | True                            |\n",
-      "+-------+--------+-----------------+--------------+---------------------+-----------------+--------------------+---------------------------------+\n",
+      "+-------+--------+-----------------+--------------+----------------------+-----------------+--------------------+---------------------------------+\n",
+      "|    id | term   | subclass_name   | class_name   |            hash_code | is_valid_term   | has_duplicate_id   | duplicate_term_class_subclass   |\n",
+      "|-------+--------+-----------------+--------------+----------------------+-----------------+--------------------+---------------------------------|\n",
+      "| 19004 | basdai | FSDA            | assessment   | -4489148185848859167 | True            | False              | True                            |\n",
+      "+-------+--------+-----------------+--------------+----------------------+-----------------+--------------------+---------------------------------+\n",
       "\n"
      ]
     }
    ],
    "source": [
     "terminology_manager = TerminologyManager(\n",
-    "    r\"D:\\DaxWorkspace\\PERC\\clever-rockies\\res\\dicts\\dict.txt\",\n",
+    "    r\"..\\..\\res\\dicts\\dict.txt\",\n",
     "    terminology_validator=TerminologyValidator(\n",
     "        TermValidator(),\n",
     "        DuplicateIdsCheckingStrategy(),\n",
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 34,
    "metadata": {
     "notebookRunGroups": {
      "groupValue": "2"
@@ -759,15 +759,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Window of terms from original terminology\n",
+      "Terms which will be deleted\n",
+      "+------+------------+-----------------+--------------+----------------------+-----------------+--------------------+---------------------------------+\n",
+      "|   id | term       | subclass_name   | class_name   |            hash_code | is_valid_term   | has_duplicate_id   | duplicate_term_class_subclass   |\n",
+      "|------+------------+-----------------+--------------+----------------------+-----------------+--------------------+---------------------------------|\n",
+      "| 3001 | tranq      | XYLA            | drug         | -1802980043639505019 | True            | False              | False                           |\n",
+      "| 3002 | tranq dope | XYLA            | drug         | -5111535385192017806 | True            | False              | False                           |\n",
+      "| 3003 | zylazine   | XYLA            | drug         |  8072201324078923795 | True            | False              | False                           |\n",
+      "+------+------------+-----------------+--------------+----------------------+-----------------+--------------------+---------------------------------+\n",
+      "\n",
+      "Window of terms to observe including surrounding terms\n",
       "+------+-----------------------------------+-----------------+--------------+----------------------+-----------------+--------------------+---------------------------------+\n",
       "|   id | term                              | subclass_name   | class_name   |            hash_code | is_valid_term   | has_duplicate_id   | duplicate_term_class_subclass   |\n",
       "|------+-----------------------------------+-----------------+--------------+----------------------+-----------------+--------------------+---------------------------------|\n",
-      "| 3000 | xylazine                          | XYLA            | drug         |  7122545635017029910 | True            | False              | False                           |\n",
-      "| 3001 | tranq                             | XYLA            | drug         |  7784681342660959491 | True            | False              | False                           |\n",
-      "| 3002 | tranq dope                        | XYLA            | drug         |  2058368228416830828 | True            | False              | False                           |\n",
-      "| 3003 | zylazine                          | XYLA            | drug         |  4286832065502239707 | True            | False              | False                           |\n",
-      "| 4000 | for controlled substances outside | PDMP            | response1    | -2834826964360820083 | True            | False              | False                           |\n",
+      "| 3000 | xylazine                          | XYLA            | drug         |  5312780436728734500 | True            | False              | False                           |\n",
+      "| 3001 | tranq                             | XYLA            | drug         | -1802980043639505019 | True            | False              | False                           |\n",
+      "| 3002 | tranq dope                        | XYLA            | drug         | -5111535385192017806 | True            | False              | False                           |\n",
+      "| 3003 | zylazine                          | XYLA            | drug         |  8072201324078923795 | True            | False              | False                           |\n",
+      "| 4000 | for controlled substances outside | PDMP            | response1    | -2068336252037976051 | True            | False              | False                           |\n",
       "+------+-----------------------------------+-----------------+--------------+----------------------+-----------------+--------------------+---------------------------------+\n",
       "\n"
      ]
@@ -783,10 +792,7 @@
     "\n",
     "window_hash_codes = original_df[NumberingDetails.HASH_LABEL].tolist()\n",
     "\n",
-    "FrameHelper.show(\n",
-    "    \"Window of terms from original terminology\",\n",
-    "    original_df,\n",
-    ")\n",
+    "\n",
     "\n",
     "\n",
     "terms: List[Term] = Term.deserialize_terms(\n",
@@ -795,6 +801,16 @@
     "        \"3002|tranq dope|XYLA|drug\",\n",
     "        \"3003|zylazine|XYLA|drug\",\n",
     "    ]\n",
+    ")\n",
+    "\n",
+    "FrameHelper.show(\n",
+    "    \"Terms which will be deleted\",\n",
+    "    original_df[original_df[NumberingDetails.HASH_LABEL].isin([x.hash_key() for x in terms])]\n",
+    ")\n",
+    "\n",
+    "FrameHelper.show(\n",
+    "    \"Window of terms to observe including surrounding terms\",\n",
+    "    original_df,\n",
     ")"
    ]
   },
@@ -807,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -818,27 +834,27 @@
       "+------+-----------------------------------+-----------------+--------------+----------------------+------------+\n",
       "|   id | term                              | subclass_name   | class_name   |            hash_code |   id_chunk |\n",
       "|------+-----------------------------------+-----------------+--------------+----------------------+------------|\n",
-      "| 3000 | xylazine                          | XYLA            | drug         |  7122545635017029910 |          3 |\n",
-      "| 3001 | tranq dope                        | XYLA            | drug         |  2058368228416830828 |          3 |\n",
-      "| 3002 | zylazine                          | XYLA            | drug         |  4286832065502239707 |          3 |\n",
-      "| 4000 | for controlled substances outside | PDMP            | response1    | -2834826964360820083 |          4 |\n",
+      "| 3000 | xylazine                          | XYLA            | drug         |  5312780436728734500 |          3 |\n",
+      "| 3001 | tranq dope                        | XYLA            | drug         | -5111535385192017806 |          3 |\n",
+      "| 3002 | zylazine                          | XYLA            | drug         |  8072201324078923795 |          3 |\n",
+      "| 4000 | for controlled substances outside | PDMP            | response1    | -2068336252037976051 |          4 |\n",
       "+------+-----------------------------------+-----------------+--------------+----------------------+------------+\n",
       "\n",
       "Showing subset updated after deletion of \"tranq dope\", \"XYLA\", \"drug\"\n",
       "+------+-----------------------------------+-----------------+--------------+----------------------+------------+\n",
       "|   id | term                              | subclass_name   | class_name   |            hash_code |   id_chunk |\n",
       "|------+-----------------------------------+-----------------+--------------+----------------------+------------|\n",
-      "| 3000 | xylazine                          | XYLA            | drug         |  7122545635017029910 |          3 |\n",
-      "| 3001 | zylazine                          | XYLA            | drug         |  4286832065502239707 |          3 |\n",
-      "| 4000 | for controlled substances outside | PDMP            | response1    | -2834826964360820083 |          4 |\n",
+      "| 3000 | xylazine                          | XYLA            | drug         |  5312780436728734500 |          3 |\n",
+      "| 3001 | zylazine                          | XYLA            | drug         |  8072201324078923795 |          3 |\n",
+      "| 4000 | for controlled substances outside | PDMP            | response1    | -2068336252037976051 |          4 |\n",
       "+------+-----------------------------------+-----------------+--------------+----------------------+------------+\n",
       "\n",
       "Showing subset updated after deletion of \"zylazine\", \"XYLA\", \"drug\"\n",
       "+------+-----------------------------------+-----------------+--------------+----------------------+------------+\n",
       "|   id | term                              | subclass_name   | class_name   |            hash_code |   id_chunk |\n",
       "|------+-----------------------------------+-----------------+--------------+----------------------+------------|\n",
-      "| 3000 | xylazine                          | XYLA            | drug         |  7122545635017029910 |          3 |\n",
-      "| 4000 | for controlled substances outside | PDMP            | response1    | -2834826964360820083 |          4 |\n",
+      "| 3000 | xylazine                          | XYLA            | drug         |  5312780436728734500 |          3 |\n",
+      "| 4000 | for controlled substances outside | PDMP            | response1    | -2068336252037976051 |          4 |\n",
       "+------+-----------------------------------+-----------------+--------------+----------------------+------------+\n",
       "\n"
      ]
@@ -865,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -876,32 +892,32 @@
       "+------+---------+-----------------+--------------+----------------------+-----------------+--------------------+---------------------------------+\n",
       "|   id | term    | subclass_name   | class_name   |            hash_code | is_valid_term   | has_duplicate_id   | duplicate_term_class_subclass   |\n",
       "|------+---------+-----------------+--------------+----------------------+-----------------+--------------------+---------------------------------|\n",
-      "|    1 | .       | DOT             | boundry      | -3440168658003845620 | True            | False              | False                           |\n",
-      "|    2 | ;       | DOT             | boundry      |  2797410022572599883 | True            | False              | False                           |\n",
-      "|   10 | old     | HX              | modifier     |   926567354131941314 | True            | False              | False                           |\n",
-      "|   11 | hx      | HX              | modifier     | -6340408827648182506 | True            | False              | False                           |\n",
-      "|   12 | h/o     | HX              | modifier     |  5058619600305237347 | True            | False              | False                           |\n",
-      "|   13 | history | HX              | modifier     |  7427331910499648926 | True            | False              | False                           |\n",
-      "|   14 | prior   | HX              | modifier     | -4544758011588518589 | True            | False              | False                           |\n",
-      "|   15 | ho      | HX              | modifier     | -8679913892923554594 | True            | False              | False                           |\n",
-      "|   16 | past    | HX              | modifier     | -2809015478772309314 | True            | False              | False                           |\n",
-      "|   17 | has had | HX              | modifier     | -4975481002542579743 | True            | False              | False                           |\n",
+      "|    1 | .       | DOT             | boundry      |   813019279694751451 | True            | False              | False                           |\n",
+      "|    2 | ;       | DOT             | boundry      | -9192791342654108884 | True            | False              | False                           |\n",
+      "|   10 | old     | HX              | modifier     |  1468161944162412334 | True            | False              | False                           |\n",
+      "|   11 | hx      | HX              | modifier     |  5978150931564632931 | True            | False              | False                           |\n",
+      "|   12 | h/o     | HX              | modifier     |  5349277412124454252 | True            | False              | False                           |\n",
+      "|   13 | history | HX              | modifier     | -8066306272500136305 | True            | False              | False                           |\n",
+      "|   14 | prior   | HX              | modifier     | -9055999893804321326 | True            | False              | False                           |\n",
+      "|   15 | ho      | HX              | modifier     | -5685116940519098420 | True            | False              | False                           |\n",
+      "|   16 | past    | HX              | modifier     |  4745600730541628826 | True            | False              | False                           |\n",
+      "|   17 | has had | HX              | modifier     |  6366697019170690086 | True            | False              | False                           |\n",
       "+------+---------+-----------------+--------------+----------------------+-----------------+--------------------+---------------------------------+\n",
       "\n",
       "Updated terminology with renumbered ids\n",
       "+------+---------+-----------------+--------------+----------------------+------------+\n",
       "|   id | term    | subclass_name   | class_name   |            hash_code |   id_chunk |\n",
       "|------+---------+-----------------+--------------+----------------------+------------|\n",
-      "|    1 | .       | DOT             | boundry      | -3440168658003845620 |          0 |\n",
-      "|    2 | ;       | DOT             | boundry      |  2797410022572599883 |          0 |\n",
-      "|    3 | old     | HX              | modifier     |   926567354131941314 |          0 |\n",
-      "|    4 | hx      | HX              | modifier     | -6340408827648182506 |          0 |\n",
-      "|    5 | h/o     | HX              | modifier     |  5058619600305237347 |          0 |\n",
-      "|    6 | history | HX              | modifier     |  7427331910499648926 |          0 |\n",
-      "|    7 | prior   | HX              | modifier     | -4544758011588518589 |          0 |\n",
-      "|    8 | ho      | HX              | modifier     | -8679913892923554594 |          0 |\n",
-      "|    9 | past    | HX              | modifier     | -2809015478772309314 |          0 |\n",
-      "|   10 | has had | HX              | modifier     | -4975481002542579743 |          0 |\n",
+      "|    1 | .       | DOT             | boundry      |   813019279694751451 |          0 |\n",
+      "|    2 | ;       | DOT             | boundry      | -9192791342654108884 |          0 |\n",
+      "|    3 | old     | HX              | modifier     |  1468161944162412334 |          0 |\n",
+      "|    4 | hx      | HX              | modifier     |  5978150931564632931 |          0 |\n",
+      "|    5 | h/o     | HX              | modifier     |  5349277412124454252 |          0 |\n",
+      "|    6 | history | HX              | modifier     | -8066306272500136305 |          0 |\n",
+      "|    7 | prior   | HX              | modifier     | -9055999893804321326 |          0 |\n",
+      "|    8 | ho      | HX              | modifier     | -5685116940519098420 |          0 |\n",
+      "|    9 | past    | HX              | modifier     |  4745600730541628826 |          0 |\n",
+      "|   10 | has had | HX              | modifier     |  6366697019170690086 |          0 |\n",
       "+------+---------+-----------------+--------------+----------------------+------------+\n",
       "\n"
      ]
@@ -931,7 +947,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
